initial: 23w17a yarn mapping